fix: customerService의 로직을 일부 수정하다.
- toList 메서드 이용하게 수정
- UUID로 convert하는 부분에 대한 예외처리 따로 빼내서 처리하게 수정